plugins {
    id 'java-library'
}

repositories {
    mavenCentral()
}

sourceCompatibility = '1.16'

dependencies {
    implementation 'junit:junit:4.13.1'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
}

test {
    useJUnitPlatform()
}